crates/rapace-macros/tests/ui/fail/owned_self_receiver.stderr
error: rapace::service methods must take &self
 --> tests/ui/fail/owned_self_receiver.rs:7:14
  |
7 |     async fn add(self, a: i32, b: i32) -> i32;
  |              ^^^
